# RISOVALKA

./: .gitignore  CMakeLists.txt
draw/: DrawLinkDef.h  book.cpp  book.h  composition.cc  composition.h  correlation.cc  correlation.cpp  correlation.h  correlation.hpp  double_differential_correlation.cpp  double_differential_correlation.h  double_differential_histogram.cpp  double_differential_histogram.h  draw_picture.cc  draw_picture.cpp  drawable_object.cc  drawable_object.cpp  drawable_object.h  drawable_object.hpp  dv1dy_container.cpp  dv1dy_container.h  file_manager.cc  file_manager.h  graph.cc  graph.cpp  graph.h  graph.hpp  heap_picture.cpp  heap_picture.h  histogram_1_d.cc  histogram_1_d.cpp  histogram_1_d.h  histogram_1_d.hpp  histogram_2_d.cpp  histogram_2_d.h  multi_correlation.cpp  multi_correlation.h  palette.cpp  palette.h  picture.cc  (+9 more)
example/: Mb_W1_corrections_check.json  draw.json  example_macro.cc  example_ratio.cc  flow_build.json  style.cc
example/dv1dy/: dv1dy_diff_systems_centrality.cpp
example/occupancy_correction/: v1_au123_pi_neg_w1_cross_components_pT_y.cpp
src/: canvas_manager.cc  canvas_manager.h  computation_manager.cc  computation_manager.h  config_manager.cc  config_manager.h  config_reader.cc  config_reader.h  correlation.cc  correlation.h  correlation_manager.cc  correlation_manager.h  correlation_stack.cc  correlation_stack.h  draw.cc  draw_functions.cc  draw_functions.h  file_manager.cc  file_manager.h  flow.cc  flow_method.cc  flow_method.h  json_reader.cc  json_reader.h  main.cc  marker_constants.h  rnd_not_ext_method.cc  rnd_not_ext_method.h  tree_sub_method.cc  tree_sub_method.h
src/config/: style.json  style_1d.json  style_2d.json
src/will_be_removed/: canvas_manager.h  config_manager.h  draw.cc
styles/: style.cc  style2D.cc
